# swagger.yaml
@@ -2,11 +2,11 @@
 swagger: '2.0'
 info:
   description: >-
-    This is a microservice that handles currency exchange rate data for Bee Travel
+    This a microservice that handles currency exchange rate data for Bee Travel
   version: 1.0.0
   title: Bee Travel Currency Data Service
   contact:
-    email: grant.steinfeld@ibm.com
+    email: okeyuchenna22@gmail.com
   license:
     name: Apache 2.0
     url: 'https://github.com/bee-travels/bee-travels/blob/master/LICENSE'
@@ -18,12 +18,25 @@ tags:
 schemes:
   - http
 paths:
+  /currency/PPP-NET/:
+    get:
+      tags:
+        - POVcount
+      summary: Gets the Regional aggregation using 2011 PPP and $1.9/day poverty line
+      description: 'POVcount'
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: Successfully got list of aggregation at international region for poverty rates
+        '500':
+          description: Internal Server Error
   /currency:
     get:
       tags:
         - Currency
-      summary: Gets list of all currency exchange rates from external API for the current day expressed in Euros
-      description: 'calls the exchangeratesapi.io'
+      summary: Gets list of all currency exchange rates from rate.json for the current day expressed in Euros
+      description: 'external api'
       produces:
         - application/json
       responses:
@@ -91,7 +104,7 @@ paths:
 
         '502':
           description: Error connecting to service
-
+         
 definitions:
   currencyNameOrCurrencyCode:
     properties:
